# sdr

./: README.md
assets/: shirt2.json
benches/: benches.rs
sdr/: Cargo.toml
sdr/src/: discrete_item.rs  discrete_line.rs  lib.rs  sdr_config.rs  sdr_optimizer.rs  sdr_parse.rs  temp
sdr/src/io/: cli.rs  json_output.rs  mod.rs
sdr/tests/: test_placement.rs  tests.rs
src/: discrete_item.rs  discrete_line.rs  lib.rs  main.rs  sdr_optimizer.rs
src/io/: layout_to_svg.rs  mod.rs  svg_export.rs  svg_util.rs
tests/: tests.rs
