[package]
name = "sdr"
version = "0.1.0"
edition = "2021"

[dependencies]
jagua-rs = { version = "0.2.1"}
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = { version = "1.19.0", features = [] }
fern = "0.7.0"
log = "0.4.20"
humantime = "2.1.0"
itertools = "0.13.0"
svg = "0.16.0"
ordered-float = "4.2.0"
clap = { version = "4.4.18", features = ["derive"] }
mimalloc = "0.1.39"
tribool = "0.3.0"
almost = "0.2.0"
test-case = "3.3.1"
thousands = "0.2.0"
tracing = {version ="0.1.41", features = ["log-always"]}
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
simplelog = "0.12.2"
rayon = "1.10.0"
chrono = "0.4.40"
dashmap = "6.1.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.test]
inherits = "release"
